# auto-listings-service-llm

./: .env.example  .gitignore  DATABASE_SCHEMA.sql  README.md  REQUIREMENTS.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260302_01_init.py
backend/src/: constants.py  main.py
backend/src/adapters/: __init__.py  base.py  carsensor.py
backend/src/api/dependencies/: auth.py
backend/src/api/routes/: auth.py  cars.py
backend/src/config/: logger.py  settings.py
backend/src/core/: jwt.py  security.py
backend/src/db/: base.py  session.py
backend/src/fixtures/: seed.py
backend/src/models/: __init__.py  car.py  user.py
backend/src/repositories/: car_repository.py  protocols.py  user_repository.py
backend/src/schemas/: auth.py  car.py
backend/src/security/: password.py  security.py
backend/src/seeds/: seed.py
backend/src/services/: auth_service.py  car_service.py
backend/src/tasks/: sync.py  worker.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_security.py
bot/: Dockerfile  pyproject.toml
bot/src/: filter_parser.py  main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  cars.ts  client.ts
frontend/src/components/: CarFilters.tsx  CarTable.tsx
frontend/src/hooks/: useCars.ts
frontend/src/pages/: CarsPage.tsx  LoginPage.tsx
frontend/src/types/: auth.ts  car.ts
(+1 files in other folders)
