[project]
name = "auto-listings-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.9",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.38",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.30.0",
    "alembic==1.15.1",
    "pyjwt==2.10.1",
    "bcrypt==4.3.0",
    "pydantic-settings==2.8.1",
    "httpx==0.28.1",
    "arq==0.26.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
